--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
@@ -40,10 +41,12 @@
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.7",
     "expo-web-browser": "~15.0.8",
+    "i18next": "^25.7.1",
     "install": "^0.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-i18next": "^16.3.5",
+    "react-native": "0.80.0",
     "react-native-app-icon-changer": "^1.3.0",
     "react-native-change-icon": "^5.0.0",
     "react-native-css-vh-vw": "^1.0.5",
@@ -53,6 +56,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-crop-picker": "^0.51.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localize": "^3.6.0",
     "react-native-maps": "1.20.1",
     "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~4.1.1",
